implement character counter

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 </head>
 
 <body>
@@ -78,7 +79,7 @@
         <br>
         <div class="button-char">
           <button type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
+          <output name="counter" class="counter" for="tweet-text" id="current-count">140</output>
         </div>
       </form>
     </section>
