--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
 
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
-  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css">
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+  <link rel="stylesheet" href="/styles/user-tweets.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -59,7 +61,6 @@
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div>
           <h2>Afreeda</h2>
       </div>
@@ -83,6 +84,40 @@
         </div>
       </form>
     </section>
+
+    <section class="user-tweets">
+      <article>
+        <header id="user-tweets-header">
+          <div class="user">
+            <img src="https://i.imgur.com/73hZDYK.png">
+            <span class="user-name">Newton</span>
+          </div>
+          <div>
+            <p class="user-handle"><span>@SirIsaac</span></p>
+          </div>
+        </header>
+
+        <div id="tweet-content">
+          <p>If I have seen further it is by standing on the shoulders of giants.
+          </p>
+        </div>
+
+        <hr class="user-tweets-horizonLine">
+
+        <footer class="user-tweets-footer">
+          <div>
+            <h5><span>10 days ago</span></h5>
+          </div>
+          <div class="footer-icons">
+            <i class="fa-sharp fa-solid fa-flag"></i>
+            <i class="fa-sharp fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
+
+      </article>
+    </section>
+
   </main>
 </body>
 
