--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+  <!--Timeago library-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -71,15 +74,18 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form action="/tweets" method="POST">
+      <form action="/tweets" method="POST" class="tweet-form">
         <div class="prompt">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
         </div>
+
         <hr class="horizonLine">
+
         <br>
+        
         <div class="button-char">
-          <button type="submit">Tweet</button>
+          <button type="submit" class="tweet-button">Tweet</button>
           <output name="counter" class="counter" for="tweet-text" id="current-count">140</output>
         </div>
       </form>
