add error messages using JQuery slideUp() and slideDown()

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,11 @@
   <!-- Page-specific (main) content here -->
   <main class="container">
     <section class="new-tweet">
+      <div id="error-container">
+        <span id="empty-error"> ⚠️ Tweet box cannot be empty when tweeting! Please enter some text</span>
+        <br>
+        <span id="counter-exceeded-error"> ⚠️ Please keep tweet character count within 140 characters.</span>
+      </div>
       <h2>Compose Tweet</h2>
       <form action="/tweets" method="POST" class="tweet-form">
         <div class="prompt">
@@ -83,7 +88,7 @@
         <hr class="horizonLine">
 
         <br>
-        
+
         <div class="button-char">
           <button type="submit" class="tweet-button">Tweet</button>
           <output name="counter" class="counter" for="tweet-text" id="current-count">140</output>
