edit layout for desktop and mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,14 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <div id="error-container">
-          <span id="empty-error"> ⚠️ Tweet box cannot be empty when tweeting! Please enter some text</span>
+        
+          <span id="empty-error"> ⚠️ Tweet box cannot be empty when tweeting! Please enter some text.</span>
           <br>
           <span id="counter-exceeded-error"> ⚠️ Please keep tweet character count within 140 characters.</span>
-        </div>
-        <h2>Compose Tweet</h2>
+        
         <form action="/tweets" method="POST" class="tweet-form">
           <div class="prompt">
-            <label for="tweet-text">What are you humming about?</label>
+            <label for="tweet-text" class="question">What are you humming about?</label>
             <textarea name="text" id="tweet-text"></textarea>
           </div>
 
